www/assets/scss/style.scss
/* ... */
@media(min-width:768px) {
	.hidden-desktop {
		display: none !important;
	}
}

@media(max-width:767px) {
	.hidden-phone {
		display: none !important;
	}
}

@media(min-width:1023px) {
	.hidden-gt-1024 {
		display: none !important;
	}
}

@media(max-width:1024px) {
	.hidden-lt-1023 {
		display: none !important;
	}
}


.cart-customize-check.custom-checkbox {
	font-size: 20px;
}

.default-order-check .custom-checkbox {
	font-size: 18px;
}

.ng-hide {
	display:none!important;
}

.community-image{
	background-size:cover !important;
	width: 200px;
	height: 88px;
}
.community-closed-message{
	text-align:center;
	margin-bottom:15px;
	font-size:16px;
}


/*Application form styles:*/
.drivers-apply .textbox {
	line-height: 2em;
}
.drivers-apply .textbox label {
	cursor: pointer;
	margin-left: 1em;
}
.drivers-apply .form-group {
    line-height: 1.6em;
    margin-bottom: 2em;
	display: inline-block;
	vertical-align: top;
}
@media screen and (min-width: 769px) {
	.drivers-apply .form-group {
    	width: 40%;
	}
	.drivers-apply .form-group:nth-child(even) {
		margin-left:7em;
	}
}
.drivers-apply .form-control {
    -webkit-box-shadow: none;
    box-shadow: none;
    padding: .2em .5em; 
    color: #555;
    line-height: 1.4em;
    background-color: #fff;
    border: 1px solid #ccc;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}
.drivers-apply .form-control-large {
    width: 100%;
    font-size: 1.2em;
    border-radius: 4px;
}
.drivers-apply .form-control-small {
    width: 50%;
    font-size: 1.2em;
    border-radius: 3px;
}
.drivers-apply .form-control-select {
	-webkit-appearance: menulist-button;
}


.drivers-apply .button-bottom {
    width: 11em; 
    background-color:rgb(247, 128, 83);
    color:white;
    border-radius:4px;
    border:none;  
}
   
i {
    font-style:italic;
    font-weight:300;
}

.drivers-apply .form-required {
    color:red;
}

.drivers-apply .apply-item-title {
	 font-weight:bold;
	 font-size:1.5em;
	 color:rgb(247, 128, 83);
}

@mixin transform($transforms) {
	-moz-transform: $transforms;
	-o-transform: $transforms;
	-ms-transform: $transforms;
	-webkit-transform: $transforms;
	transform: $transforms;
}

@mixin scale ($deg) {
	@include transform(scale($deg));
}

@mixin transition($transition) {
	-moz-transition: $transition;
	-o-transition: $transition;
	-ms-transition: $transition;
	-webkit-transition: $transition;
	transition: $transition;
}



.inline-spinner {
	opacity: 0;
	pointer-events: none;
	overflow: hidden;
	@include scale(2.5);
}
.inline-spinner-wrapper .inline-spinner, .inline-spinner-wrapper .inline-spinner-content {
	@include transition(all 0.2s);
}

.inline-spinner-wrapper.loading .inline-spinner {
	opacity: 1;
	@include scale(1);
}

.inline-spinner-wrapper.loading .inline-spinner-content {
	opacity: 0;
}

